--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Rocket Science</string>
+    <string name="company">Company</string>
+    <string name="company_info">%s was founded by %s in %d. It now has %d employees, %d launch sites, and is valued at USD %d</string>
+    <string name="launches">Launches</string>
 </resources>
